fix doc page without sidebar layout problem

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -121,3 +121,11 @@ html[data-theme="dark"] {
     transform: scale(1.1);
   }
 }
+
+@media (min-width: 997px) {
+  .docMainContainer_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocPage- {
+    // flex-grow: 1;
+    // max-width: calc(100% - var(--doc-sidebar-width));
+    max-width: 100%;
+  }
+}
